--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 	<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
 	<script src="gpx.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="application.css" type="text/css" media="screen" charset="utf-8" />
-	
 </head>
 <body>
+	
+	<ul id="options">
+		<li><a href="#">FastRideHome.gpx</a></li>
+	</ul>
+	
 	<div id="map"></div>
 
 
