colors for speeds

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>GPX Viewer</title>
 	<script src="jquery.js" type="text/javascript" charset="utf-8"></script>
 	  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAHBYCY-5zYgYgZ38Jam-5nxSTKEp7py0caJTJEXq_wNxF4Jq_4hS2RdptbYE1DlTGqjtjIx9EwSBnng" type="text/javascript"></script>
+	<script src="parseISO8601.js" type="text/javascript" charset="utf-8"></script>
 	<script src="gpx.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="application.css" type="text/css" media="screen" charset="utf-8" />
 </head>
