add bike to quarry with wren gpx file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<div id="main">	
 		<ul id="options">
 			<li><a href="#">FastRideHome.gpx</a></li>
+			<li><a href="#">BikeToQuarryWWren.gpx</a></li>
 		</ul>
 	
 		<div id="map_canvas"></div>
