add fairhaven walking

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a href="#">FastRideHome.gpx</a></li>
 			<li><a href="#">BikeToQuarryWWren.gpx</a></li>
 			<li><a href="#">ToQuarry.gpx</a></li>
+			<li><a href="#">FairhavenWalking.gpx</a></li>
 		</ul>
 	
 		<div id="map_canvas"></div>
